--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -298,7 +298,7 @@
                         DisplayMemberPath="Name"
                         VerticalAlignment="Top" Margin="10,10,0,0" HorizontalAlignment="Left"
                         SelectionChanged="ProfilesButton_OnSelectionChanged"
-                        MouseDoubleClick="ProfilesButton_OnMouseDoubleClick"
+                        MouseDoubleClick="ProfilesButton_OnMouseDoubleClick" SelectedIndex="0"
                         >
                         <Controls:SplitButton.Icon>
                             <Canvas     Margin="5,10,0,10"
