--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -121,6 +121,10 @@
                               AutoGenerateColumns="False"
                               ContextMenuOpening="InstalledAssembliesDataGrid_OnContextMenuOpening"
                               ItemsSource="{Binding Config.SelectedProfile.InstalledAssemblies, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
+                              AllowDrop="True"
+                              SelectionMode="Extended" 
+                              PreviewMouseLeftButtonDown="InstalledAssembliesDataGrid_PreviewMouseLeftButtonDown" 
+                              Drop="InstalledAssembliesDataGrid_Drop"
                                >
                         <DataGrid.ContextMenu>
                             <ContextMenu>
