--- a/Resources/Language/English.xaml
+++ b/Resources/Language/English.xaml
@@ -67,6 +67,7 @@
     <system:String x:Key="Debug Console">Debug Console</system:String>
     <system:String x:Key="Show Ping">Show Ping</system:String>
     <system:String x:Key="Show Drawings">Show Drawings</system:String>
+    <system:String x:Key="Send Anonymous Assembly Statistics">Send Anonymous Assembly Statistics</system:String>
     <system:String x:Key="Display Enemy Tower Range">Display enemy tower range</system:String>
     <system:String x:Key="Extended Zoom">Extended Zoom</system:String>
     <system:String x:Key="UpdateOnStart">Update assemblies on start</system:String>
