--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -3,7 +3,6 @@
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                       xmlns:tb="http://www.hardcodet.net/taskbar"
-                      Title="LeagueSharp" 
                       Height="384" 
                       Width="660"
                       MinHeight="240"
@@ -390,5 +389,6 @@
                 </Grid>
             </TabItem>
         </TabControl>
+        <TextBlock Text="LEAGUESHARP" FontSize="15" Foreground="White" IsHitTestVisible="False" Margin="10,-25,0,0" Height="25" VerticalAlignment="Top" HorizontalAlignment="Left" Width="100"/>
     </Grid>
 </Controls:MetroWindow>
